[MD settings] touch-up removal of encoding settings

This CL changes some comments and closure compiler values to touch-up
after the removal of the encodings menu.

BUG=641899, 597488
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2398233004
Cr-Commit-Position: refs/heads/master@{#424050}

Former-commit-id: 08b1d375eb4870c3e0f2bf4654f9b3faf29e6254